--- a/src/app.css
+++ b/src/app.css
@@ -13,7 +13,7 @@
 
   /* Fonts */
   --font-family: 'GT Pressura Mono', 'Autoscape TTTrial',  'Riforma Trial', 'GT Pressura Mono', 'Replica Mono Trial', "helvetica neue", helvetica, arial, sans-serif;
-  --display-family: 'Rock Salt', cursive;
+  --display-family: 'GT Pressura Mono', 'Rock Salt', cursive;
 
 
   /* Font size */
