--- a/src/app.css
+++ b/src/app.css
@@ -75,7 +75,7 @@ img {
 
 .content a {
   text-decoration: underline;
-  text-decoration-color: yellow;
+  text-decoration-color: grey;
 }
 
 .content hr {
