--- a/src/app.css
+++ b/src/app.css
@@ -29,13 +29,11 @@
 
 * {
   box-sizing: border-box;
-  scroll-behavior: smooth;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 html {
-  scroll-behavior: smooth;
   margin: 0;
   padding: 0;
   color: var(--foreground-color);
@@ -56,7 +54,7 @@ a {
 }
 
 h1, h2, h3 {
-  font-size: inherit;
+  font-size: var(--font-size-normal);
   font-weight: normal;
 }
 
@@ -67,10 +65,6 @@ mux-player {
 
 img { 
   max-width:100%;
-}
-
-.content h1, h2, h3 {
-  font-size: 2em;
 }
 
 .content a {
