--- a/src/app.css
+++ b/src/app.css
@@ -4,6 +4,7 @@
   --black: rgba(10,10,10,1);
   --blackish: rgba(30,30,30,1);
   --grey: rgba(193, 193, 193, 1);
+  --dark-grey: grey;
   --orange: rgba(255, 69, 0, 1);
   --background-color: var( --black);
   --foreground-color: var(--grey);
@@ -69,18 +70,18 @@ img {
 
 .content a {
   text-decoration: underline;
-  text-decoration-color: grey;
+  text-decoration-color: var(--dark-grey);
 }
 
 .content h2 {
-  background: grey;
+  background: var(--dark-grey);
   color: var(--black);
   padding: 1ch;
   margin-top: 6em;
 }
 
 .content hr {
-  border: 1px solid grey;
+  border: 1px solid var(--dark-grey);
   margin: 1em 0;
   height: 0;
   appearance: none;
