--- a/static/fonts/index.css
+++ b/static/fonts/index.css
@@ -16,3 +16,11 @@
     font-display: swap;
 }
 
+@font-face {
+    font-family: 'GT Pressura Mono';
+    src: url('./gt-pressura/GTPressuraMonoTrial-Bold.woff2') format('woff2'),
+        url('./gt-pressura/GTPressuraMonoTrial-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
