--- a/src/app.css
+++ b/src/app.css
@@ -13,9 +13,7 @@
   --background-accent: rgba(20,20,20,1);
 
   /* Fonts */
-  --font-family: 'GT Pressura Mono', 'Autoscape TTTrial',  'Riforma Trial', 'GT Pressura Mono', 'Replica Mono Trial', "helvetica neue", helvetica, arial, sans-serif;
-  --display-family: 'GT Pressura Mono', 'Rock Salt', cursive;
-
+  --font-family: 'GT Pressura Mono', helvetica, arial, sans-serif;
 
   /* Font size */
   --font-size-normal: 16px;
