--- a/src/app.css
+++ b/src/app.css
@@ -17,6 +17,9 @@
 
   /* Font size */
   --font-size-normal: 16px;
+  --font-size-large: 48px;
+  --font-size-mobile-large: 32px;
+
   --line-height-normal: 1.4em;
   --line-height-text: 1.7em;
   --line-height-compressed: 1em;
