--- a/static/fonts/index.css
+++ b/static/fonts/index.css
@@ -9,9 +9,25 @@
 
 @font-face {
     font-family: 'GT Pressura Mono';
+    src: url('./gt-pressura/GT-Pressura-Mono-Regular-Italic-Trial.woff2') format('woff2');
+    font-weight: normal;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'GT Pressura Mono';
     src: url('./gt-pressura/GTPressuraMonoTrial-Bold.woff2') format('woff2'),
         url('./gt-pressura/GTPressuraMonoTrial-Bold.woff') format('woff');
     font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'GT Pressura Mono';
+    src: url('./gt-pressura/GT-Pressura-Mono-Light-Trial.woff2') format('woff2');
+    font-weight: 200;
     font-style: normal;
     font-display: swap;
 }
