--- a/src/app.css
+++ b/src/app.css
@@ -42,6 +42,16 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+*::-moz-selection { /* Code for Firefox */
+  color: var(--black);
+  background: rgb(255, 255, 90);
+}
+
+*::selection {
+  color: var(--black);
+  background: rgb(255, 255, 90);
+}
+
 html {
   margin: 0;
   padding: 0;
