--- a/src/app.css
+++ b/src/app.css
@@ -4,7 +4,7 @@
   --black: rgba(10,10,10,1);
   --blackish: rgba(30,30,30,1);
   --grey: rgba(193, 193, 193, 1);
-  --dark-grey: grey;
+  --dark-grey: rgb(93, 92, 92);
   /* --dark-grey: rgb(105, 105, 105); */
   --orange: rgba(255, 69, 0, 1);
   --background-color: var( --black);
